# Bulbyk

./: .gitignore  CMakeLists.txt
include/: Bullet.h  ColoradoBeetle.h  Constants.h  Enemy.h  EnemyFactory.h  Game.h  GameState.h  Player.h  PlayerCamera.h  TextUtils.h
src/: Bullet.cpp  ColoradoBeetle.cpp  Enemy.cpp  EnemyFactory.cpp  Game.cpp  Player.cpp  PlayerCamera.cpp  TextUtils.cpp  main.cpp  testECS.cpp  test_collision.cpp
src/components/: Collider.h  Health.h  Sprite.h  Transform.h
src/core/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp  TransformSystem.h
